--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-http-request": "^1.0.3",
+    "superagent": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
