--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-http-request": "^1.0.3",
-    "superagent": "^3.4.4"
+    "react-dom": "^15.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
